--- a/src/BlazorAgGrid/AgGrid.razor
+++ b/src/BlazorAgGrid/AgGrid.razor
@@ -1,7 +1,14 @@
 ﻿@using Microsoft.JSInterop
 @inject IJSRuntime FOO
 
-<CascadingValue Name="@nameof(GridOptions.ColumnDefinitions)" Value="@_columnDefinitions"
-    ><CascadingValue Name="@nameof(GridOptions.RowData)" Value="@_rowData"
-        >@ChildContent</CascadingValue></CascadingValue>
-<div id="@(Guid.NewGuid())" @ref="_gridDiv" style="height: @(HeightStyle); width: @(WidthStyle);" class="ag-theme-balham"></div>
+<CascadingValue Name="@nameof(GridOptions.ColumnDefinitions)" Value="@_columnDefinitions">
+    <CascadingValue Name="@nameof(GridOptions.RowData)" Value="@_rowData">
+        @ChildContent
+    </CascadingValue>
+</CascadingValue>
+
+<div id="@(Guid.NewGuid())"
+     @ref="_gridDiv"
+     style="height: @(HeightStyle); width: @(WidthStyle);"
+     class="ag-theme-balham">
+</div>
